...
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="7S6-84-udK"/>
                                    <constraint firstAttribute="height" constant="80" id="pgq-Fu-FaB"/>
                                </constraints>
                                <color key="tintColor" systemColor="labelColor"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="AC">
                                    <fontDescription key="titleFontDescription" type="system" pointSize="35"/>
                                </buttonConfiguration>
                                <connections>
                                    <action selector="deleteAll:" destination="BYZ-38-t0r" eventType="touchUpInside" id="POH-Zd-CGj"/>
                                </connections>
                            </button>
...
